--- a/Paper_Review/_config.yml
+++ b/Paper_Review/_config.yml
@@ -1,5 +1,5 @@
-source: Paper_Review
-baseurl: ""
+# source: Paper_Review
+baseurl: "/Paper_Review/"
 permalink: pretty
 title: "hahaha"
 collections_dir: collections
