--- a/.github/workflows/jekyll-ghpages.yml
+++ b/.github/workflows/jekyll-ghpages.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./Paper_Review/_site
+          path: ./_site
 
   # Deployment job
   deploy:
